fix(dnd-builder): presentation expand/collapse icons change

--- a/src/styles/_jfReportsSVG.scss
+++ b/src/styles/_jfReportsSVG.scss
@@ -126,6 +126,11 @@
   .icon-fullscreen {
     width: 12px;
     height: 12px;
+    fill: #FFFFFF;
+
+    path {
+      fill: #FFFFFF;
+    }
   }
 
   .icon-aspectLock, .icon-aspectUnlock {
